# gp_spline

./: .gitignore  CMakeLists.txt  README.md
data_orig/hw/in/: hw_april0.txt  hw_april1.txt  hw_april2.txt  hw_april3.txt  hw_apriltag.txt  hw_imu.txt  hw_rover_truth.txt
data_orig/linear_sim/: mc.txt
data_orig/linear_sim/mc/: gp_0_0_30_1.txt  gp_1_1_150_0.txt  gp_1_1_150_1.txt  gp_1_1_15_0.txt  gp_1_1_15_1.txt  gp_1_1_300_0.txt  gp_1_1_300_1.txt  gp_1_1_30_0.txt  gp_1_1_30_1.txt  gp_1_1_3_0.txt  gp_1_1_3_1.txt  gp_1_1_600_0.txt  gp_1_1_600_1.txt  gp_2_1_150_0.txt  gp_2_1_150_1.txt  gp_2_1_15_0.txt  gp_2_1_15_1.txt  gp_2_1_1_0.txt  gp_2_1_250_0.txt  gp_2_1_300_0.txt  gp_2_1_300_1.txt  gp_2_1_30_0.txt  gp_2_1_30_1.txt  gp_2_1_3_0.txt  gp_2_1_3_1.txt  gp_2_1_500_0.txt  gp_2_1_600_0.txt  gp_2_1_600_1.txt  (+190 more)
data_orig/sim/: est_imu.txt  imu.txt  opt.txt  truth.txt
data_orig/sim/wnoj/: imu.txt  (+23 more)
include/estimator/: estimator_base.h  gp_se3_estimator.h  gp_so3xr3_estimator.h  lie_spline_motion_prior.hpp  rn_spline_motion_prior.hpp  spline_estimator.hpp
include/gp/: lie_gp.hpp  rn_gp.hpp  sonxrn_gp.hpp
include/hw/: hw_params.h
include/lie_groups/: lie_groups.h  se2.hpp  se3.hpp  so2.hpp  so3.hpp  sonxrn.hpp
include/linear_example/: gp_lin_est.hpp  gp_pos_residual.hpp  pos_residual.hpp  spline_lin_est.hpp  spline_pos_residual.hpp
include/parameterizations/: sen_parameterization.hpp  son_parameterization.hpp
include/residuals/: apriltag_residual.hpp  dummy_callback.h  gp_apriltag_residual.hpp  gp_dynamics_residual.hpp  gp_imu_residual.hpp  mocap_spline_residual.hpp  pose_eval_callback.hpp  sonxrn_spline_dynamics_residual.hpp  spline_apriltag_residual.hpp  spline_dynamics_residual.hpp  spline_imu_residual.hpp
include/sim/: sim_params.h
include/spline/: lie_spline.hpp  rn_spline.hpp  sonxrn_spline.hpp  utils.hpp
include/utils/: line.h  multivariate_gaussian.hpp  sinusoid.h
params/: hw.yaml  linear_sim.yaml  sim.yaml
scripts/: acc_plot.py  cam_imu_mc.py  hw_plotter.py  hw_results.py  hw_view_timestamps.py  info_mat_form.py  lie_gp_test.py  linear_mc_plotter.py  linear_sim_plotter.py  plot_wnoj_trajs.py  rosbag2_parser.py  rosbag_parser.py  sim_plotter.py
src/estimator/: estimator_base.cpp  gp_se3_estimator.cpp  gp_so3xr3_estimator.cpp
src/hw/: hw.cpp
src/linear_example/: linear_sim.cpp
src/sim/: sim.cpp
src/test/: lie_gp_jac_test.cpp  lie_gp_test.cpp  lie_spline_jac_test.cpp  lie_spline_motion_prior_jac_test.cpp  lie_spline_motion_prior_opt_test.cpp  rn_gp_resid_test.cpp  rn_spline_motion_prior_jac_test.cpp
src/utils/: line.cpp  sinusoid.cpp
(+6 files in other folders)
